--- a/WebContent/css/HomePage.css
+++ b/WebContent/css/HomePage.css
@@ -2,12 +2,12 @@
 #function{
 	width:20%;
 	 height: 200px;
-	background-color: red;
+/* 	background-color: red; */
 	  float:left;
 }
 #view{
 	width:80%;
 	 height: 200px;
-	background-color: green;
+/* 	background-color: green; */
 	  float:left;
 }
